[tool.poetry]
name = "htagweb"
version = "0.0.0" # auto-updated
description = "It's a robust webserver (http/ws) for hosting htag apps on the web (a process by user)"
authors = ["manatlan <manatlan@gmail.com>"]
readme = 'README.md'
license="MIT"
keywords=['htag','webserver']
homepage = "https://github.com/manatlan/htagweb"
repository = "https://github.com/manatlan/htagweb"
documentation = "https://github.com/manatlan/htagweb"
classifiers = [
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Build Tools",
        "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.7"
htag = ">= 0.51"
starlette = "0.29.0"
pycryptodomex = "^3.19.0"
uvicorn = {version = "0.22.0", extras = ["standard"]}
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "0.24.0"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
